--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "mqtt": "^4.3.7",
     "mysql": "^2.18.1",
     "next": "12.0.7",
     "react": "17.0.2",
